// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrderContent > should render without error, filled order 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.c7 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 12px;
}

.c9 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 4px;
}

.c10 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 8px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
  gap: 12px;
}

.c8 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: space-between;
  gap: 12px;
}

.c3 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c4 {
  color: rgba(19, 19, 19, 0.63);
  letter-spacing: -0.01em;
}

.c11 {
  cursor: auto;
  color: rgba(19, 19, 19, 0.63);
}

.c12 {
  text-align: right;
  overflow-wrap: break-word;
}

.c14 {
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
  color: #FF37C7;
  stroke: #FF37C7;
  font-weight: 500;
}

.c14 :hover {
  opacity: 0.6;
}

.c14 :active {
  opacity: 0.4;
}

.c13 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  align-items: center;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: flex;
  flex-direction: row;
  text-align: left;
  flex-wrap: wrap;
  user-select: text;
}

.c5 {
  width: 100%;
  height: 1px;
  border-width: 0;
  margin: 0;
  background-color: rgba(19, 19, 19, 0.08);
}

.c6 {
  margin: 28px 0;
}

<div>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
        gap="md"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _top-0px _left-0px"
        >
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _height-40px _width-40px"
            >
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _left-0px _overflowX-hidden _overflowY-hidden _position-absolute _top-0px _width-19px"
                data-testid="input-currency-logo-container"
              >
                <div
                  class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-40px _justifyContent-center _pointerEvents-auto _width-40px _position-relative"
                  data-testid="token-logo"
                >
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-20px _borderTopRightRadius-20px _borderBottomRightRadius-20px _borderBottomLeftRadius-20px"
                  />
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                    data-testid="img-token-image"
                  >
                    <img
                      height="40"
                      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                      style="object-fit: contain; border-radius: 20px; z-index: 1;"
                      width="40"
                    />
                  </div>
                </div>
              </div>
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row-reverse _overflowX-hidden _overflowY-hidden _position-absolute _right-0px _top-0px _width-19px"
                data-testid="output-currency-logo-container"
              >
                <div
                  class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-40px _justifyContent-center _pointerEvents-auto _width-40px _position-relative"
                  data-testid="token-logo"
                >
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-20px _borderTopRightRadius-20px _borderBottomRightRadius-20px _borderBottomLeftRadius-20px"
                  />
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                    data-testid="img-token-image"
                  >
                    <img
                      height="40"
                      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                      style="object-fit: contain; border-radius: 20px; z-index: 1;"
                      width="40"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c0"
        >
          <div
            class="c3 css-rjqmed"
          >
            Order executed
          </div>
          <div
            class="c4 css-1aekuku"
          >
            Mock Date
          </div>
        </div>
      </div>
      <div
        class="c5 c6"
      />
      <div
        class="c7"
        gap="md"
      >
        <div
          align="center"
          class="c1 c8"
          gap="md"
          justify="space-between"
        >
          <div
            class="c9"
            gap="xs"
          >
            <div
              class="c9"
              gap="xs"
            >
              <div
                class="c3 css-vhdk4b"
                data-testid="input-amount"
              >
                252.074
                 
                DAI
              </div>
              <div
                class="c4 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-36px _justifyContent-center _pointerEvents-auto _width-36px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-18px _borderTopRightRadius-18px _borderBottomRightRadius-18px _borderBottomLeftRadius-18px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="36"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                style="object-fit: contain; border-radius: 18px; z-index: 1;"
                width="36"
              />
            </div>
          </div>
        </div>
        <svg
          fill="none"
          height="24"
          stroke="rgba(19, 19, 19, 0.35)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="12"
            x2="12"
            y1="5"
            y2="19"
          />
          <polyline
            points="19 12 12 19 5 12"
          />
        </svg>
        <div
          align="center"
          class="c1 c8"
          gap="md"
          justify="space-between"
        >
          <div
            class="c9"
            gap="xs"
          >
            <div
              class="c9"
              gap="xs"
            >
              <div
                class="c3 css-vhdk4b"
                data-testid="output-amount"
              >
                0.10684
                 
                WETH
              </div>
              <div
                class="c4 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-36px _justifyContent-center _pointerEvents-auto _width-36px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-18px _borderTopRightRadius-18px _borderBottomRightRadius-18px _borderBottomLeftRadius-18px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="36"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                style="object-fit: contain; border-radius: 18px; z-index: 1;"
                width="36"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5 c6"
      />
      <div
        class="c10"
        gap="sm"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c3 c11 css-142zc9n"
            data-testid="swap-li-label"
          >
            Rate
          </div>
          <div
            class="c3 c12 css-142zc9n"
          >
            <button
              class="c13"
              title="1 WETH = 2,359.34 DAI "
            >
              <div
                class="c3 css-142zc9n"
              >
                1 WETH = 2,359.34 DAI 
              </div>
               
            </button>
          </div>
        </div>
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c3 c11 css-142zc9n"
            data-testid="swap-li-label"
          >
            Network cost
          </div>
          <div
            class="c3 c12 css-142zc9n"
          >
            <span>
              $0
            </span>
          </div>
        </div>
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c3 c11 css-142zc9n"
            data-testid="swap-li-label"
          >
            Transaction ID
          </div>
          <div
            class="c3 c12 css-142zc9n"
          >
            <a
              class="c14"
              href="https://etherscan.io/tx/0xad7a8f73f28fd0cc16459111899dd1632164ae139fcf5281a1bced56e1ff6564"
              rel="noopener noreferrer"
              target="_blank"
            >
              0xad...6564
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`OrderContent > should render without error, limit order 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.c7 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 12px;
}

.c9 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 4px;
}

.c10 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 8px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
  gap: 12px;
}

.c8 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: space-between;
  gap: 12px;
}

.c3 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c4 {
  color: rgba(19, 19, 19, 0.63);
  letter-spacing: -0.01em;
}

.c11 {
  cursor: auto;
  color: rgba(19, 19, 19, 0.63);
}

.c12 {
  text-align: right;
  overflow-wrap: break-word;
}

.c14 {
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
  color: #FF37C7;
  stroke: #FF37C7;
  font-weight: 500;
}

.c14 :hover {
  opacity: 0.6;
}

.c14 :active {
  opacity: 0.4;
}

.c13 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  align-items: center;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: flex;
  flex-direction: row;
  text-align: left;
  flex-wrap: wrap;
  user-select: text;
}

.c5 {
  width: 100%;
  height: 1px;
  border-width: 0;
  margin: 0;
  background-color: rgba(19, 19, 19, 0.08);
}

.c6 {
  margin: 28px 0;
}

<div>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
        gap="md"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _top-0px _left-0px"
        >
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _height-40px _width-40px"
            >
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _left-0px _overflowX-hidden _overflowY-hidden _position-absolute _top-0px _width-19px"
                data-testid="input-currency-logo-container"
              >
                <div
                  class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-40px _justifyContent-center _pointerEvents-auto _width-40px _position-relative"
                  data-testid="token-logo"
                >
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-20px _borderTopRightRadius-20px _borderBottomRightRadius-20px _borderBottomLeftRadius-20px"
                  />
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                    data-testid="img-token-image"
                  >
                    <img
                      height="40"
                      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                      style="object-fit: contain; border-radius: 20px; z-index: 1;"
                      width="40"
                    />
                  </div>
                </div>
              </div>
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row-reverse _overflowX-hidden _overflowY-hidden _position-absolute _right-0px _top-0px _width-19px"
                data-testid="output-currency-logo-container"
              >
                <div
                  class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-40px _justifyContent-center _pointerEvents-auto _width-40px _position-relative"
                  data-testid="token-logo"
                >
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-20px _borderTopRightRadius-20px _borderBottomRightRadius-20px _borderBottomLeftRadius-20px"
                  />
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                    data-testid="img-token-image"
                  >
                    <img
                      height="40"
                      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                      style="object-fit: contain; border-radius: 20px; z-index: 1;"
                      width="40"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c0"
        >
          <div
            class="c3 css-rjqmed"
          >
            Limit pending
          </div>
          <div
            class="c4 css-1aekuku"
          >
            Mock Date
          </div>
        </div>
      </div>
      <div
        class="c5 c6"
      />
      <div
        class="c7"
        gap="md"
      >
        <div
          align="center"
          class="c1 c8"
          gap="md"
          justify="space-between"
        >
          <div
            class="c9"
            gap="xs"
          >
            <div
              class="c9"
              gap="xs"
            >
              <div
                class="c3 css-vhdk4b"
                data-testid="input-amount"
              >
                252.074
                 
                DAI
              </div>
              <div
                class="c4 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-36px _justifyContent-center _pointerEvents-auto _width-36px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-18px _borderTopRightRadius-18px _borderBottomRightRadius-18px _borderBottomLeftRadius-18px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="36"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                style="object-fit: contain; border-radius: 18px; z-index: 1;"
                width="36"
              />
            </div>
          </div>
        </div>
        <svg
          fill="none"
          height="24"
          stroke="rgba(19, 19, 19, 0.35)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="12"
            x2="12"
            y1="5"
            y2="19"
          />
          <polyline
            points="19 12 12 19 5 12"
          />
        </svg>
        <div
          align="center"
          class="c1 c8"
          gap="md"
          justify="space-between"
        >
          <div
            class="c9"
            gap="xs"
          >
            <div
              class="c9"
              gap="xs"
            >
              <div
                class="c3 css-vhdk4b"
                data-testid="output-amount"
              >
                0.10684
                 
                WETH
              </div>
              <div
                class="c4 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-36px _justifyContent-center _pointerEvents-auto _width-36px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-18px _borderTopRightRadius-18px _borderBottomRightRadius-18px _borderBottomLeftRadius-18px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="36"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                style="object-fit: contain; border-radius: 18px; z-index: 1;"
                width="36"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5 c6"
      />
      <div
        class="c10"
        gap="sm"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c3 c11 css-142zc9n"
            data-testid="swap-li-label"
          >
            Rate
          </div>
          <div
            class="c3 c12 css-142zc9n"
          >
            <button
              class="c13"
              title="1 WETH = 2,359.34 DAI "
            >
              <div
                class="c3 css-142zc9n"
              >
                1 WETH = 2,359.34 DAI 
              </div>
               
            </button>
          </div>
        </div>
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c3 c11 css-142zc9n"
            data-testid="swap-li-label"
          >
            Expiry
          </div>
          <div
            class="c3 c12 css-142zc9n"
          >
            <span>
              Mock Date
            </span>
          </div>
        </div>
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c3 c11 css-142zc9n"
            data-testid="swap-li-label"
          >
            Network cost
          </div>
          <div
            class="c3 c12 css-142zc9n"
          >
            <span>
              $0
            </span>
          </div>
        </div>
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c3 c11 css-142zc9n"
            data-testid="swap-li-label"
          >
            Transaction ID
          </div>
          <div
            class="c3 c12 css-142zc9n"
          >
            <a
              class="c14"
              href="https://etherscan.io/tx/0xad7a8f73f28fd0cc16459111899dd1632164ae139fcf5281a1bced56e1ff6564"
              rel="noopener noreferrer"
              target="_blank"
            >
              0xad...6564
            </a>
          </div>
        </div>
      </div>
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _mt-t-space-spa1360334080"
      >
        <button
          class="is_Button  t_group_item"
          dd-action-name="Cancel limit"
          style="display: flex; flex-basis: 0px; box-sizing: border-box; position: relative; min-height: 0px; min-width: 0px; flex-shrink: 1; flex-direction: row; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; align-items: center; justify-content: center; background-color: rgba(19, 19, 19, 0.08); border-top-color: transparent; border-right-color: transparent; border-bottom-color: transparent; border-left-color: transparent; cursor: pointer; height: auto; align-self: stretch; flex-grow: 1; outline-color: rgba(0, 0, 0, 0); padding: 8px 12px 8px 12px; border-top-left-radius: 12px; border-top-right-radius: 12px; border-bottom-right-radius: 12px; border-bottom-left-radius: 12px; gap: 8px; border-bottom-style: solid; border-top-style: solid; border-left-style: solid; border-right-style: solid; transform: [object Object];"
        >
          <span
            class="font_button _color-_groupitem-hover_neutral1Hov3121676 _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _maxWidth-10037 _overflowX-hidden _overflowY-hidden _textOverflow-ellipsis _textAlign-center _fontSize-f-size-smal108 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1269072494"
            line-height-disabled="false"
          >
            Cancel limit
          </span>
        </button>
      </div>
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-surface2 _borderTopLeftRadius-t-radius-ro291586453 _borderTopRightRadius-t-radius-ro291586453 _borderBottomRightRadius-t-radius-ro291586453 _borderBottomLeftRadius-t-radius-ro291586453 _pt-t-space-spa1360334080 _pr-t-space-spa1360334080 _pb-t-space-spa1360334080 _pl-t-space-spa1360334080 _mt-t-space-spa1360334080 _gap-t-space-gap52"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-micr111 _lineHeight-f-lineHeigh1263414315 _fontWeight-f-weight-bo3548"
          data-disable-theme="true"
        >
          Please be aware that the execution for limits may vary based on real-time market fluctuations and Ethereum network congestion. Limits may not execute exactly when tokens reach the specified price.
        </span>
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-micr111 _lineHeight-f-lineHeigh1263414315 _fontWeight-f-weight-bo3548"
          data-disable-theme="true"
        >
          Canceling a limit has a network cost.
        </span>
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-micr111 _lineHeight-f-lineHeigh1263414315 _fontWeight-f-weight-bo3548"
          data-disable-theme="true"
        >
          <a
            class="c14"
            href="https://support.uniswap.org/hc/en-us/articles/24300813697933"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
          </a>
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`OrderContent > should render without error, open order 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.c7 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 12px;
}

.c9 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 4px;
}

.c10 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 8px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
  gap: 12px;
}

.c8 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: space-between;
  gap: 12px;
}

.c3 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c4 {
  color: rgba(19, 19, 19, 0.63);
  letter-spacing: -0.01em;
}

.c11 {
  cursor: auto;
  color: rgba(19, 19, 19, 0.63);
}

.c12 {
  text-align: right;
  overflow-wrap: break-word;
}

.c14 {
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
  color: #FF37C7;
  stroke: #FF37C7;
  font-weight: 500;
}

.c14 :hover {
  opacity: 0.6;
}

.c14 :active {
  opacity: 0.4;
}

.c13 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  align-items: center;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: flex;
  flex-direction: row;
  text-align: left;
  flex-wrap: wrap;
  user-select: text;
}

.c5 {
  width: 100%;
  height: 1px;
  border-width: 0;
  margin: 0;
  background-color: rgba(19, 19, 19, 0.08);
}

.c6 {
  margin: 28px 0;
}

<div>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
        gap="md"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _top-0px _left-0px"
        >
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _height-40px _width-40px"
            >
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _left-0px _overflowX-hidden _overflowY-hidden _position-absolute _top-0px _width-19px"
                data-testid="input-currency-logo-container"
              >
                <div
                  class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-40px _justifyContent-center _pointerEvents-auto _width-40px _position-relative"
                  data-testid="token-logo"
                >
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-20px _borderTopRightRadius-20px _borderBottomRightRadius-20px _borderBottomLeftRadius-20px"
                  />
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                    data-testid="img-token-image"
                  >
                    <img
                      height="40"
                      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                      style="object-fit: contain; border-radius: 20px; z-index: 1;"
                      width="40"
                    />
                  </div>
                </div>
              </div>
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row-reverse _overflowX-hidden _overflowY-hidden _position-absolute _right-0px _top-0px _width-19px"
                data-testid="output-currency-logo-container"
              >
                <div
                  class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-40px _justifyContent-center _pointerEvents-auto _width-40px _position-relative"
                  data-testid="token-logo"
                >
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-20px _borderTopRightRadius-20px _borderBottomRightRadius-20px _borderBottomLeftRadius-20px"
                  />
                  <div
                    class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                    data-testid="img-token-image"
                  >
                    <img
                      height="40"
                      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                      style="object-fit: contain; border-radius: 20px; z-index: 1;"
                      width="40"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c0"
        >
          <div
            class="c3 css-rjqmed"
          >
            Order pending
          </div>
          <div
            class="c4 css-1aekuku"
          >
            Mock Date
          </div>
        </div>
      </div>
      <div
        class="c5 c6"
      />
      <div
        class="c7"
        gap="md"
      >
        <div
          align="center"
          class="c1 c8"
          gap="md"
          justify="space-between"
        >
          <div
            class="c9"
            gap="xs"
          >
            <div
              class="c9"
              gap="xs"
            >
              <div
                class="c3 css-vhdk4b"
                data-testid="input-amount"
              >
                252.074
                 
                DAI
              </div>
              <div
                class="c4 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-36px _justifyContent-center _pointerEvents-auto _width-36px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-18px _borderTopRightRadius-18px _borderBottomRightRadius-18px _borderBottomLeftRadius-18px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="36"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                style="object-fit: contain; border-radius: 18px; z-index: 1;"
                width="36"
              />
            </div>
          </div>
        </div>
        <svg
          fill="none"
          height="24"
          stroke="rgba(19, 19, 19, 0.35)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="12"
            x2="12"
            y1="5"
            y2="19"
          />
          <polyline
            points="19 12 12 19 5 12"
          />
        </svg>
        <div
          align="center"
          class="c1 c8"
          gap="md"
          justify="space-between"
        >
          <div
            class="c9"
            gap="xs"
          >
            <div
              class="c9"
              gap="xs"
            >
              <div
                class="c3 css-vhdk4b"
                data-testid="output-amount"
              >
                0.10684
                 
                WETH
              </div>
              <div
                class="c4 css-142zc9n"
              >
                -
              </div>
            </div>
          </div>
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-36px _justifyContent-center _pointerEvents-auto _width-36px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-18px _borderTopRightRadius-18px _borderBottomRightRadius-18px _borderBottomLeftRadius-18px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="36"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                style="object-fit: contain; border-radius: 18px; z-index: 1;"
                width="36"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5 c6"
      />
      <div
        class="c10"
        gap="sm"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c3 c11 css-142zc9n"
            data-testid="swap-li-label"
          >
            Rate
          </div>
          <div
            class="c3 c12 css-142zc9n"
          >
            <button
              class="c13"
              title="1 WETH = 2,359.34 DAI "
            >
              <div
                class="c3 css-142zc9n"
              >
                1 WETH = 2,359.34 DAI 
              </div>
               
            </button>
          </div>
        </div>
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c3 c11 css-142zc9n"
            data-testid="swap-li-label"
          >
            Expiry
          </div>
          <div
            class="c3 c12 css-142zc9n"
          >
            <span>
              Mock Date
            </span>
          </div>
        </div>
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c3 c11 css-142zc9n"
            data-testid="swap-li-label"
          >
            Network cost
          </div>
          <div
            class="c3 c12 css-142zc9n"
          >
            <span>
              $0
            </span>
          </div>
        </div>
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c3 c11 css-142zc9n"
            data-testid="swap-li-label"
          >
            Transaction ID
          </div>
          <div
            class="c3 c12 css-142zc9n"
          >
            <a
              class="c14"
              href="https://etherscan.io/tx/0xad7a8f73f28fd0cc16459111899dd1632164ae139fcf5281a1bced56e1ff6564"
              rel="noopener noreferrer"
              target="_blank"
            >
              0xad...6564
            </a>
          </div>
        </div>
      </div>
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _mt-t-space-spa1360334080"
      >
        <button
          class="is_Button  t_group_item"
          dd-action-name="Cancel order"
          style="display: flex; flex-basis: 0px; box-sizing: border-box; position: relative; min-height: 0px; min-width: 0px; flex-shrink: 1; flex-direction: row; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; align-items: center; justify-content: center; background-color: rgba(19, 19, 19, 0.08); border-top-color: transparent; border-right-color: transparent; border-bottom-color: transparent; border-left-color: transparent; cursor: pointer; height: auto; align-self: stretch; flex-grow: 1; outline-color: rgba(0, 0, 0, 0); padding: 8px 12px 8px 12px; border-top-left-radius: 12px; border-top-right-radius: 12px; border-bottom-right-radius: 12px; border-bottom-left-radius: 12px; gap: 8px; border-bottom-style: solid; border-top-style: solid; border-left-style: solid; border-right-style: solid; transform: [object Object];"
        >
          <span
            class="font_button _color-_groupitem-hover_neutral1Hov3121676 _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _maxWidth-10037 _overflowX-hidden _overflowY-hidden _textOverflow-ellipsis _textAlign-center _fontSize-f-size-smal108 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1269072494"
            line-height-disabled="false"
          >
            Cancel order
          </span>
        </button>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;
